--- a/Module 6_ML0101EN_SkillUp_FinalAssignment.jupyterlite.ipynb
+++ b/Module 6_ML0101EN_SkillUp_FinalAssignment.jupyterlite.ipynb
@@ -154,7 +154,7 @@
       "source": [
         "# All Libraries required for this lab are listed below. The libraries pre-installed on Skills Network Labs are commented.\n",
         "# !mamba install -qy pandas==1.3.4 numpy==1.21.4 seaborn==0.9.0 matplotlib==3.5.0 scikit-learn==0.20.1\n",
-        "# Note: If your environment doesn't support \"!mamba install\", use \"!pip ins"
+        "# Note: If your environment doesn't support \"!mamba install\", use \"!pip install\""
       ]
     },
     {
